Adds get by id feature
